@@ -41,6 +41,7 @@
      [ -<strong>v</strong> ]
      [ -<strong>e</strong> ]
      [ -<strong>c</strong> ]
+     [ -<strong>n</strong> <var>number-of-files</var> ]
      <var>logfile</var>
      <var>rotationtime</var>|<var>filesize</var>(B|K|M|G)
      [ <var>offset</var> ]</code></p>
@@ -101,6 +102,11 @@ processed in real time by a further tool in the chain.</dd>
 
 <dt><code>-c</code></dt>
 <dd>Create log file for each interval, even if empty.</dd>
+
+<dt><code>-n <var>number-of-files</var></code></dt>
+<dd>Use a circular list of filenames without timestamps.
+With -n 3, the series of log files opened would be
+"logfile", "logfile.1", "logfile.2", then overwriting "logfile".</dd>
 
 <dt><code><var>logfile</var></code></dt>
 
